--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,21 @@ uuid = "3f93ea72-029c-46bb-aa46-2b37939b0662"
 authors = ["Chris Elrod <elrodc@gmail.com> and contributors"]
 version = "0.1.0"
 
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+[deps]
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+StrideArraysCore = "7792a7ef-975c-4747-a70f-980b88e8d1da"
+ThreadingUtilities = "8290d209-cae3-49c0-8002-c8c24d57dab5"
+VectorizationBase = "3d5dd08c-fd9d-11e8-17fa-ed2836048c2f"
 
 [compat]
+Requires = "1"
+StrideArraysCore = "0.1"
+ThreadingUtilities = "0.2"
+VectorizationBase = "0.18.7"
 julia = "1.5"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
